<?xml version="1.0" encoding="utf-8"?>



<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CutTreeActivity"
    tools:showIn="@layout/activity_cut_tree">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:text=""
            android:textColor="@color/colorAccent"/>

        <View
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:background="#16552e"/>


        <!--Fills in the details to cut a tree -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <!--Fills in the details for the username.-->
            <EditText android:id="@+id/newuser_name"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:hint="@string/newuser_hint"/>
            <!--Fills in the details for the user's password.-->
            <EditText android:id="@+id/newuser_pass"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:hint="@string/newuserpass_hint"/>

            <!--Enter tree id box -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newtree_id"
                android:hint="@string/newtree_id"/>
            <!--Clicking this button will cut a tree, as long as the details are filled in. -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/cutTree_button"
                android:onClick="cutTree"/>
        </LinearLayout>

        <View
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:background="#16552e"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
