<?xml version="1.0" encoding="utf-8"?>



<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreateUserPage"
    tools:showIn="@layout/activity_create_user_page">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:text=""
            android:textColor="@color/colorAccent"/>

        <View
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:background="#16552e"/>

        <!--Fills in the details for a new user-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <!--Enter username box-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newuser_name"
                android:hint="@string/newuser_hint"/>
            <!--Enter password box-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newuser_pass"
                android:hint="@string/newuserpass_hint"/>
            <!--Enter phoneNumber box-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newuser_phoneNumber"
                android:hint="@string/newuserphoneNumber_hint"/>
            <!--Clicking this button will create a new user, as long as the details are filled in.-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/newuser_button"
                android:onClick="addUser"/>
        </LinearLayout>

        <View
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:background="#16552e"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
