<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.mcgill.ecse321.treebook.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:text=""
            android:textColor="@color/colorAccent"/>

        <View
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:background="#16552e"/>

        <!--Fills in the details for a new user-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <!--Button that brings us to Login Page-->
            <!--
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/goLogin_Button"
                android:onClick="goLoginPage"/>
                -->
            <!--Button that brings us to Create User Page-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/goAddUser_button"
                android:onClick="goCreateUserPage"/>

            <!--Button that brings us to Add Tree Page-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/goAddTree_button"
                android:onClick="goAddTreePage"/>

            <!--Button that brings us to Cut down tree Page-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/goCutTree_Button"
                android:onClick="goCutTreePage"/>

            <!--Button that brings us to View Trees Page-->
            <!--
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/goViewTrees_button"
                android:onClick="goViewTreesPage"/>
                -->
            <!--Button that brings us to Edit Tree Page-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/goEditTreePage_Button"
                android:onClick="goEditTreePage"/>
            <!--Button that brings us to Request Tree Page-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/goRequestTreePage_Button"
                android:onClick="goRequestTree"/>


        </LinearLayout>

        <View
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:background="#16552e"/>
    </LinearLayout>

</RelativeLayout>
